# openff-packmol

./: .pre-commit-config.yaml  LICENSE  LICENSE-3RD-PARTY  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst
openff/packmol/: __init__.py  _packmol.py  exceptions.py
openff/packmol/_tests/: __init__.py  conftest.py  test_issues.py
openff/packmol/_tests/unit_tests/: test_packmol.py
