[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "openff-packmol"
description = "A Packmol wrapper using OpenFF objects"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

[tool.setuptools]
packages.find.include = [ "openff.packmol*" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pixi]
workspace.channels = [ "conda-forge" ]
workspace.platforms = [ "linux-64", "osx-arm64" ]
dependencies.numpy = "*"
dependencies.openff-toolkit-base = "*"
dependencies.openff-utilities = "*"
dependencies.packaging = "*"
dependencies.pip = "*"
dependencies.python = "*"
dependencies.scipy = "*"
dependencies.setuptools-scm = "*"
pypi-dependencies.openff-packmol = { path = ".", editable = true }
tasks.run_mypy = { cmd = "python -m mypy -p 'openff.packmol'" }
tasks.run_tests = { cmd = "pytest $COV openff/packmol/" }
feature.ambertools.dependencies.ambertools = ">=24.8"
feature.ambertools.dependencies.numpy = "2.2.*"  # ParmEd bugs
feature.dev.dependencies.pre-commit = "*"
feature.py312.dependencies.python = "3.12.*"
feature.py313.dependencies.python = "3.13.*"
feature.standalone.dependencies.packmol = "*"
feature.test.dependencies.openmm = "*"
feature.test.dependencies.pytest = "*"
feature.test.dependencies.pytest-cov = "*"
feature.test.dependencies.pytest-randomly = "*"
feature.test.dependencies.pytest-xdist = "*"
feature.test.dependencies.rdkit = "*"
feature.typing.dependencies.mypy = "*"
feature.typing.dependencies.scipy-stubs = "*"
environments.dev = [ "py313", "dev" ]
environments.py312-ambertools = [ "py312", "test", "ambertools" ]
environments.py312-standalone = [ "py312", "test", "standalone" ]
environments.py313-ambertools = [ "py313", "test", "ambertools" ]
environments.py313-standalone = [ "py313", "test", "standalone" ]
environments.typing = [ "py313", "typing" ]

[tool.ruff]
line-length = 119
namespace-packages = [ "openff/packmol/" ]
lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]

[tool.mypy]
exclude = "openff/packmol/_tests"
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
overrides = [ { module = [
  "openff.toolkit",
], ignore_missing_imports = true } ]

[tool.pytest]
ini_options.addopts = "-n logical -x --cov=openff/packmol --cov-report=xml"

[tool.coverage]
run.omit = [
  "*/*/_tests/*",
]
report.exclude_lines = [
  "@overload",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
